# templatier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-v2.yml  release.yml
src/: customhelper.rs  main.rs  sprig.rs
