[package]
name = "templatier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
handlebars = "4.3.7"
serde = { version = "1.0.171", features = ["derive", "serde_derive"] }
serde_json = "1.0.102"
