[package]
name = "templatier"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
handlebars = "5.1.0"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive", "serde_derive"] }
serde_json = "1.0.102"
